--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "vision-agent-experiments"
-version = "0.1.0"
+version = "0.1.1"
 description = "Default template for PDM package"
 authors = [
     {name = "Adrian Stritzinger", email = "Adrian.Stritzinger@askui.com"},
 ]
 dependencies = [
     "pydantic-settings>=2.6.1",
-    "askui @ git+ssh://git@github.com/askui/vision-agent.git@poc/data-processing",
+    "askui>=0.1.11",
 ]
 requires-python = "==3.11.*"
 readme = "README.md"
